syntax = "proto3";

option go_package = "grpc/news/pb";

package pb;

message Contact {
  string email = 1;
  string phone = 2;
  string name = 3;
  string subject = 4;
  string msg = 5;
  int32 status = 6;
  string createdAt = 7;
  string id = 8;
}

message ContactReq {
  string email = 1;
  string phone = 2;
  string name = 3;
  string subject = 4;
  string msg = 5;
  int32 offset = 6;
  int32 limit = 7;
}

message ContactResp {
  int32 code = 1;
  string msg = 2;
  Contact contact = 3;
}

message ContactsResp {
  int32 code = 1;
  string msg = 2;
  repeated Contact contacts = 3;
}

