syntax = "proto3";

option go_package = "grpc/news/pb";

package pb;

message NewsEmail {
  string email = 1;
}
